static/admin/sass/_table.sass
.dataTables_wrapper
  font-size: 0.7rem

.dataTables_filter
  @extend .golden-container
  & label
    margin: 0 $medium
  & input
    margin-left: 20px

.dataTables_info
  margin: $light $medium

.table-header
  font-size: 0.5em

table
  font-family: monospace
  text-align: left
  min-width: 100%

tr:nth-child(2n+1)
  background: #f5f5f5

tr:hover
  background: #eefaff
  cursor: pointer

td,th
  padding: 6px
  border-left: 1px solid $green
  white-space: nowrap

th
  position: relative
  cursor: pointer
  outline: none
  background: #fefefe
  padding-right: 20px
  &:hover
    background: #ffe
  &:active
    background: #ffa
  &::after
    content: ''
    display: block
    position: absolute
    top: 50%
    margin-top: -4px
    right: 4px
    width: 0
    height: 0
    border-style: hidden
  &.sorting_desc::after
    border-style: solid
    border-width: 0 4px 7px 4px
    border-color: transparent transparent #000 transparent
  &.sorting_asc::after
    border-style: solid
    border-width: 7px 4px 0 4px
    border-color: #000 transparent transparent transparent

.dt-buttons,
.dt-button-collection
  button
    font-size: 0.5em
    box-shadow: none
    margin-right: 0
    background: none
    border: none
    padding: 0 0.25em

.dt-button-collection
  button
    opacity: 0.25
    &.active
      opacity: 1

.print-map-table
  td,th
    max-width: 200px
    transition: all 100ms
  td:hover
    transform: scale3d(1.05,1.05,1.05)
    background: #ffffff
    box-shadow: inset 0 0 0 2px #BFA

